Bug 1197244 - Newsletters Control Center:  use a separate .lang file for all the newsletter stuff * newsletter.lang is no longer loaded as a default langfile for all templates (because only 8 locales do the newsletters and default files are assigned to all locales) * all newsletter templates and newsletter python files except the hacks blog get their strings extracted to mozorg/newsletters.lang * newsletter/views.py was loading strings from the contribute page, now they are also loaded from mozorg/newsletters.lang * mozorg/forms.py now also loads strings from mozorg/newsletter.lang * One string was corrected in a template (2 spaces instead of 1) * tests and documentation updated
The mozorg/newsletters.lang file already has all the string copied from newsletter.lang and the file is on production on svn for the 8 locales that translate newsletters.

Strings in newsletter.lang that were used outside of newsletters were moved to main.lang

We will remove the old newsletter.lang from svn only once bedrock will run the new code and will no longer include newsletter.lang by default for all pages.

--- a/docs/l10n.rst
+++ b/docs/l10n.rst
@@ -161,7 +161,7 @@ know which one to use when translating a particular string?
 * All translations from Python files are put into main.lang. This
   should be a very limited set of strings and most likely should be
   available to all pages.
-* Templates always load in `main.lang`, `download_button.lang`, and `newsletter.lang`
+* Templates always load in `main.lang` and `download_button.lang`.
 * Additionally, each template has its own .lang file, so a template at
   `mozorg/firefox.html` would use the .lang file at
   `<locale>/mozorg/firefox.lang`.
@@ -175,7 +175,7 @@ know which one to use when translating a particular string?
     {% add_lang_files "foo" "bar" %}
 
 That will make the page load `foo.lang` and `bar.lang` in addition to
-`main.lang`, `download_button.lang`, and `newsletter.lang`.
+`main.lang` and `download_button.lang`.
 
 When strings are extracted from a template, that are added to the
 template-specific .lang file. If the template explicitly specifies
@@ -199,8 +199,8 @@ value should be either a string, or a list of strings, similar to the
     sometext = _('Foo about bar.')
 
 This file's strings would be extracted to `foo.lang`, and the lang files
-`foo.lang`, `bar.lang`, `main.lang`, `download_button.lang`, and `newsletter.lang`
-would be searched for matches in that order.
+`foo.lang`, `bar.lang`, `main.lang` and `download_button.lang`would be
+searched for matches in that order.
 
 l10n blocks
 ------------------
